prevent long title and author name overflow

--- a/style/style.css
+++ b/style/style.css
@@ -167,9 +167,10 @@ img{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    gap: 5px;
-    padding: 20px;
+    gap: 20px;
+    padding: 30px;
     box-shadow: 0px 1px 20px rgba(0,0,0,0.15);
+    border-radius: 6px 6px 0px 0px;
 }
 
 .book-controls{
@@ -196,13 +197,31 @@ button{
     background-color: var(--red-shade);
 }
 
+.author-display{
+    max-width: 200px;
+}
+
+.title-display{
+    max-width: 160px;
+}
+
+.pages-display{
+    max-width: 120px;
+}
+
+p{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 #form-container{
     position: absolute;
     background-color: white;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 5px 20px rgba(0,0,0,0.15);
     width: 50vw;
     height: 60vh;
     z-index: 3;
